# fastPL

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  Test.cpp  _alternatives_performance_8h.html  _alternatives_performance_8h__dep__incl.map  _alternatives_performance_8h__dep__incl.md5  _alternatives_performance_8h__incl.map  _alternatives_performance_8h__incl.md5  _alternatives_performance_8h_source.html  _atomic_m_c_d_a_object_8h_source.html  _categories_8h.html  _categories_8h__dep__incl.map  _categories_8h__dep__incl.md5  _categories_8h__incl.map  _categories_8h__incl.md5  _categories_8h_source.html  _category_8h.html  _category_8h__dep__incl.map  _category_8h__dep__incl.md5  _category_8h__incl.map  _category_8h__incl.md5  _category_8h_source.html  _criteria_8h.html  _criteria_8h__dep__incl.map  _criteria_8h__dep__incl.md5  _criteria_8h__incl.map  _criteria_8h__incl.md5  _criteria_8h_source.html  _criterion_8h.html  _criterion_8h__dep__incl.map  _criterion_8h__dep__incl.md5  _criterion_8h__incl.map  _criterion_8h__incl.md5  _criterion_8h_source.html  _data_generator_8h.html  _data_generator_8h__incl.map  (+202 more)
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml
data/: model1.xml  test.txt  test.xml  test_dataset.xml  test_model.xml  test_save_model.xml  wrong_structure.xml
data/tests/: in1dataset.xml  in2dataset.xml  in3dataset.xml  in4dataset.xml  in7dataset.xml  laurent.xml  out1model.xml  out1modelcrit.xml  out3model.xml  out3modelcrit.xml  out4model.xml  out4modelcrit.xml  out7model.xml  out7modelcrit.xml  test_dataset.xml  test_model.xml
doc/: CMakeLists.txt
doc/pages/: INITPROFILES.md  LEARNINGALGO.md  MAINPAGE.md  UPDATEPROFILES.md  WEIGHTUPDATER.md  init_profiles.md  learning_algo.md  update_profiles.md  weight_updater.md
doxygen/: Doxyfile.Doxygen
extsrc/matplotlibcpp/: matplotlibcpp.h
extsrc/pugixml/src/: pugiconfig.hpp
include/: app.h  config.h  utils.h
include/learning/: HeuristicPipeline.h  InitializeProfile.h  LinearSolver.h  ProfileInitializer.h  ProfileUpdater.h  WeightUpdater.h
include/types/: AlternativesPerformance.h  Categories.h  Category.h  Criteria.h  Criterion.h  DataGenerator.h  MRSortModel.h  Perf.h  Performance.h  PerformanceTable.h  ProfileUpdater.h  Profiles.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  (+22 more)
src/: AlternativePerformance.cpp  AlternativePerformance.h  AlternativesPerformance.cpp  AlternativesPerformance.h  AtomicMCDAObject.cpp  AtomicMCDAObject.h  Categories.cpp  Categories.h  Category.cpp  Category.h  Criteria.cpp  Criteria.h  Criterion.cpp  Criterion.h  CriterionValue.cpp  CriterionValue.h  DataGenerator.cpp  DataGenerator.h  MRSort.cpp  MRSort.h  MRSortModel.cpp  MRSortModel.h  Perf.cpp  Perf.h  Performance.cpp  Performance.h  PerformanceTable.cpp  PerformanceTable.h  app.cpp  example.cpp  example.h  main.cpp  plttest.cpp  utils.cpp  utils.h  utils2.h
src/learning/: HeuristicPipeline.cpp  InitializeProfile.cpp  LinearSolver.cpp  ProfileInitializer.cpp  ProfileUpdater.cpp  WeightUpdater.cpp
src/types/: AlternativesPerformance.cpp  AtomicMCDAObject.cpp  Categories.cpp  Category.cpp  Criteria.cpp  Criterion.cpp  DataGenerator.cpp  MRSortModel.cpp  Perf.cpp  Performance.cpp  PerformanceTable.cpp  ProfileUpdater.cpp  Profiles.cpp
test/: TestAlternativePerformance.cpp  TestAlternativesPerformance.cpp  TestCategories.cpp  TestCategory.cpp  TestCriteria.cpp  TestCriterion.cpp  TestCriterionValue.cpp  TestDataGenerator.cpp  TestMRSort.cpp  TestMRSortModel.cpp  TestMain.cpp  TestPerf.cpp  TestPerformance.cpp  TestPerformanceTable.cpp  TestUtils.cpp  test_example.cpp
test/learning/: TestHeuristicPipeline.cpp  TestInitializeProfile.cpp  TestLinearSolver.cpp  TestProfileUpdater.cpp  TestWeightUpdater.cpp
test/types/: TestAlternativesPerformance.cpp  TestCategories.cpp  TestCategory.cpp  TestChangeMode.cpp  TestCriteria.cpp  TestCriterion.cpp  TestDataGenerator.cpp  TestMRSortModel.cpp  TestPerf.cpp  TestPerformance.cpp  TestPerformanceTable.cpp  TestProfileUpdater.cpp  TestProfiles.cpp
